--- a/main.html
+++ b/main.html
@@ -70,7 +70,27 @@
 </div>
 </section>
 
+<section class="discount">
+    <div class="content">
+        <h2 class="what">WHAT IS FUNCTIONAL</h2>
+        <div class="holy"><h1><span class="color">Holidays</span> Sale 50%</h1></div>
+        <div class="dolar"><p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p></div>
+    </div>
+<div class="img">
+<section class="image-content">
+    <!-- <div class="image-content"> -->
+        <div class="image-content-1">
+        <img class="image-1" src="images/Group 75.png" alt="coupon box">
+        
+            <img class="image-2" src="images/Group 44.png" alt="">
+    </div>
+    </div>
 
+
+
+
+</section>
 
 
 
