--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <header>
         <div class="banner">
             <div class="banner-contents">
-                <div class="barner-about">Happy New Year</div>
-                <div class="barner-title">New Year Party Celebration</div>
+                <div class="banner-about">Happy New Year</div>
+                <div class="banner-title">New Year Party Celebration</div>
             </div>
         </div>
     </header>
