fished this project work

--- a/main.html
+++ b/main.html
@@ -65,8 +65,8 @@
 
 </div>
 <div class="right">
-    <div class="r1"><h1>2024</h1></div>
-    <div class="r2"><p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p></div>
+    <div class="r1"><h1>2024</h1></div><br>
+    <div class="r2"><p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p></div><br>
     <div class="r3"><img src="images/Group 96.png" alt="happy new year"></div>
 </div>
 </section>
@@ -123,8 +123,38 @@
 
 
     </main>
-    <footer>
-        
+    <footer><small>
+        <section class="footer">
+            <div class="footer-address">
+                <div class="street"><address>44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410</div>
+                    <div class="contact"><address>
+                        <div class="mobile">
+                            <img src="images/Call.png" alt="">
+                            <p> 017 82 42 70 35</p>
+                        </div>
+                        <div class="website">
+                            <img src="images/Website.png" alt="">
+                            <a href="www.google.com"> www.website.com</a>
+                        </div>
+                        </address>
+                    </div>
+                    
+            </div>
+            <hr class="hr">
+            <div class="social-media">
+                <img src="images/Facebook.png" alt="">
+                <img src="images/Instagram.png" alt="">
+                <img src="images/Linkedin.png" alt="">
+                <img src="images/Twitter.png" alt="">
+            </div>
+            <hr class="hr">
+            <div class="rights">
+                <div><p>&copy;2024,all Rights Reserved:SOURAV DEBNATH</p></div>
+                <div class="Unsubscribe"><button>Unsubscribe</button></div>
+            </div>
+        </section>
+        </small>
     </footer>
 </body>
 </html>
